@startuml


class CalcRating {
  - data: DataType
  - rating: RatingType
  + __init__(data: DataType)
  + calc() : RatingType
}

class CharacteristicsCalculator {
  - data: DataType
  + __init__(data: DataType)
  + count_excellent_students() : int
}

interface DataReader {
  + read(path: str) : DataType
}

class TextDataReader {
  - key: str
  - students: DataType
  + read(path: str) : DataType
}

class YamlDataReader {
  - key: str
  - students: DataType
  + read(path: str) : DataType
}

DataType --> "1" CalcRating
DataType --> "1" CharacteristicsCalculator
DataReader <|.. TextDataReader
DataReader <|.. YamlDataReader

@enduml
